--- a/src/components/homePage/dateElement/style.css
+++ b/src/components/homePage/dateElement/style.css
@@ -8,4 +8,6 @@
 .date {
     font-family: "Helvetica Neue", Helvetica, sans-serif;
     font-size: 2em;
+    padding-bottom: .2em;
+    border-bottom: 1px solid black;
 }
