--- a/src/components/homePage/dateElement/dateWordElement/style.css
+++ b/src/components/homePage/dateElement/dateWordElement/style.css
@@ -1,4 +1,36 @@
 .element {
-    margin: .2em;
+    height: 2em;
     margin-top: .4em;
+    width: 100%;
+    background-color: #f3f3f3;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.word {
+    text-decoration: none;
+    font-size: 1.4em;
+    margin: .2em 0;
+    padding: 0 .4em;
+    color: black;
+    transition: text-shadow .4s;
+}
+
+.word:hover {
+    text-shadow: 0 0 .1em rgba(0,0,0,.2);
+}
+
+.countCont {
+    height: 100%;
+    background-color: #e0e0e0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 2em;
+}
+
+.count {
+    padding: .2em 0;
+    font-size: 1.2em;
 }
