Add t word data tab functionality

--- a/src/components/homePage/dateElement/dateWordElement/style.css
+++ b/src/components/homePage/dateElement/dateWordElement/style.css
@@ -6,6 +6,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    transition: background-color .4s ease-in;
+}
+
+.element:hover {
+    background-color: #8abe83;
 }
 
 .word {
