--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -16,4 +16,17 @@
     font-family: 'PT Sans', sans-serif;
     text-shadow: 1px 1px 5px rgba(0,0,0,.5);
     color: #464646;
+    text-decoration: none;
+
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    text-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: text-shadow;
+    transition-property: text-shadow;
+}
+
+.title:hover, .title:focus {
+    text-shadow: 0 0 4px rgba(0, 0, 0, 0.6);
 }
