--- a/src/components/homePage/style.css
+++ b/src/components/homePage/style.css
@@ -22,3 +22,50 @@
     font-family: 'Roboto Slab', serif;
     color: #4c4c4c;
 }
+
+/* 
+Sorting buttons
+*/
+
+.displayOptionsCont {
+    list-style-type: none;
+    margin-top: 1em;
+    background-color: grey;
+    border-radius: 5;
+}
+
+.displayOptionsCont li {
+    float: left;
+}
+
+.displayOptionsCont button {
+    height: 2em;
+    border: none;
+    outline: none;
+    padding: 0 2em;
+    transition: box-shadow .5s;
+}
+
+.leftButton {
+    border-radius: 3px 0 0 3px;
+    height: 10px;
+    background-color: #ececec;
+}
+
+.rightButton {
+    border-radius: 0 3px 3px 0;
+    background-color: #ececec;
+}
+
+.activeButton {
+    background-color: #9e9e9e;/*#ecab56*/
+    box-shadow: inset 0 0 3px 1px rgba(0,0,0,.5);
+}
+
+.leftButton:hover, .rightButton:hover {
+    box-shadow: 0 0 1px 1px rgba(0,0,0,.3);   
+}
+
+.activeButton:hover {
+    box-shadow: inset 0 0 5px 1px rgba(0,0,0,.7);
+}
