--- a/src/components/header/loginheader/loginform/style.css
+++ b/src/components/header/loginheader/loginform/style.css
@@ -48,6 +48,7 @@
     transition-duration: 0.3s;
     -webkit-transition-property: box-shadow;
     transition-property: box-shadow;
+    cursor: pointer;
 }
 
 .button:hover, .button:focus {
