--- a/src/scenes/AddWord/components/UploadPhotoForm/style.css
+++ b/src/scenes/AddWord/components/UploadPhotoForm/style.css
@@ -1,3 +1,66 @@
 .cont {
 
 }
+
+.form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.fileInputCont {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.image {
+    width: 30vw;
+    height: 40vh;
+    display: block;
+    margin: 1em 0;
+    border-radius: .7em;
+    border: .3em solid #d4d4d4;
+}
+
+.noImage {
+    height: 40vh;
+    display: block;
+}
+
+.buttonCont {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.button {
+    font-size: 1.1em;
+    background-color: #ecab56;
+    /*background-color: #ecab56; // When join button pressent*/ 
+    height: 1.8em;
+    transition: box-shadow .3s;
+    font-family: "Helvetica Neue", Helvetica, sans-serif;
+    border: none;
+    outline: none;
+    border-radius: 3px;
+    margin-top: .3em;
+
+    /* animation taken from hover.css */
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: box-shadow;
+    transition-property: box-shadow;
+    float: right;
+    margin-bottom: .4em;
+    cursor: pointer;
+}
+
+.button:hover, .button:focus {
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+}
