--- a/src/scenes/AddWord/style.css
+++ b/src/scenes/AddWord/style.css
@@ -13,15 +13,15 @@
     border-radius: 0 0 4px 4px;
     transition: all .5s;
     width: 35vw;
-    height: 40vh;
+    height: 41vh;
 }
 
 .bigCont {
     box-shadow: 0 0 10px rgba(0,0,0,.5);
     border-radius: 0 0 4px 4px;
     transition: all .5s;
-    width: 60vw;
-    height: 70vh;
+    width: 80vw;
+    height: 80vh;
 }
 
 .tab {
@@ -74,4 +74,8 @@
     top: -1em;
     z-index: 20;
     background-color: white;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
