--- a/src/scenes/Home/dateElement/dateWordElement/style.css
+++ b/src/scenes/Home/dateElement/dateWordElement/style.css
@@ -7,6 +7,7 @@
     align-items: center;
     justify-content: space-between;
     transition: background-color .4s ease-in;
+    cursor: pointer;
 }
 
 .element:hover {
