--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -35,3 +35,14 @@
     display: flex;
     align-items: center;
 }
+
+@media only screen and (max-width: 1000px) {
+    .header {
+        height: 10em;
+    }
+
+    .title {
+        font-size: 6em;
+        margin-left: .3em;
+    }
+}
