--- a/src/scenes/AddWord/style.css
+++ b/src/scenes/AddWord/style.css
@@ -1,7 +1,7 @@
 .addWordPage {
     position: absolute;
     top: 3em;
-    height: 100%;
+    height: calc(100vh - 3em);
     width: 100%;
     display: flex;
     justify-content: center;
