--- a/src/scenes/Welcome/introduction/style.css
+++ b/src/scenes/Welcome/introduction/style.css
@@ -1,6 +1,6 @@
 .headerCont {
-    position: absolute;
-    top: 20%;
+    position: relative;
+    top: 20vh;
     left: 10%;
     width: 50%;
 }
@@ -51,4 +51,49 @@
 
 .link:hover, .link:focus {
     box-shadow: 0 0 8px rgba(255, 255, 255, 0.6);
+}
+
+@media only screen and (max-width: 1000px) {
+    .headerCont {
+        margin-top: 10em;
+        top: 0;
+        left: 0;
+        width: 90%;
+        background-color: rgba(0,0,0,0.5);
+        padding: 2em;
+        border-radius: 3em;
+    }
+
+    .header {
+        font-size: 5em;
+    }
+
+    .introCont {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .desc {
+        font-size: 2.5em;
+    }
+
+    .linkCont {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .link {
+        width: 80%;
+        border-radius: .5em;
+        font-size: 4em;
+        display: flex;
+        justify-content: center;
+    }
+
+    .login {
+        background-color: #8abd83;
+    }
 }
