--- a/src/scenes/Home/TopList/style.css
+++ b/src/scenes/Home/TopList/style.css
@@ -2,3 +2,9 @@
     width: 60%;
     margin-top: 2em;
 }
+
+@media only screen and (max-width: 1000px) {
+    .cont {
+        width: 100%;
+    }
+}
