--- a/src/scenes/Home/components/OptionsBar/style.css
+++ b/src/scenes/Home/components/OptionsBar/style.css
@@ -47,3 +47,23 @@
     padding-left: .5em;
     font-size: 1.3em;
 }
+
+@media only screen and (max-width: 1000px) {
+    .cont {
+        width: 100%;
+        flex-wrap: wrap;
+        margin-top: 2em;
+        margin-bottom: 1.4em;
+        -webkit-box-shadow: 0px 3px 15px 0px rgba(0,0,0,0.4);
+        -moz-box-shadow: 0px 3px 15px 0px rgba(0,0,0,0.4);
+        box-shadow: 0px 3px 15px 0px rgba(0,0,0,0.4);
+        font-size: 2em;
+    }
+    .button {
+        font-size: 2em;
+    }
+    .search {
+        margin: 0;
+        display: none;
+    }
+}
