--- a/src/scenes/Home/dateElement/dateWordElement/style.css
+++ b/src/scenes/Home/dateElement/dateWordElement/style.css
@@ -40,3 +40,23 @@
     padding: .2em 0;
     font-size: 1.2em;
 }
+
+@media only screen and (max-width: 1000px) {
+    .element {
+        height: 6em;
+        margin-top: 1.2em;
+    }
+
+    .word {
+        font-size: 4em;
+        margin-left: .5em;
+    }
+
+    .countCont {
+        width: 5em;
+    }
+    .count {
+        font-size: 3em;
+    }
+}
+
