--- a/src/scenes/Home/dateElement/style.css
+++ b/src/scenes/Home/dateElement/style.css
@@ -11,3 +11,15 @@
     padding-bottom: .2em;
     border-bottom: 1px solid black;
 }
+
+@media only screen and (max-width: 1000px) {
+    .dateEl {
+        width: 100vw;
+    }
+
+    .date {
+        font-size: 4em;
+        width: 100vw;
+        color: #bdbdbd;
+    }
+}
