--- a/src/scenes/Home/style.css
+++ b/src/scenes/Home/style.css
@@ -22,3 +22,14 @@
     font-family: 'Roboto Slab', serif;
     color: #4c4c4c;
 }
+
+@media only screen and (max-width: 1000px) {
+    .cont {
+        width: 100%;
+    }
+
+    .emptyHeader {
+        font-size: 5em;
+    }
+
+}
