--- a/src/components/Button/style.css
+++ b/src/components/Button/style.css
@@ -7,6 +7,7 @@
     font-size: 1.1em;
     height: 1.8em;
     transition: box-shadow .3s;
+    display: flex;
 
     /* animation taken from hover.css */
     display: inline-block;
